Fix position of editor view controls
These were so far off to the right tht they got cut off by the screen.
This aligns them with the user icon

--- a/src/components/Editor/EditorInterface.css
+++ b/src/components/Editor/EditorInterface.css
@@ -69,7 +69,7 @@
 .nc-entryEditor-viewControls {
   position: absolute;
   top: 10px;
-  right: -10px;
+  right: 10px;
   z-index: 299;
 }
 
